# gerlumphpp

./: .gitignore  Makefile.am  README.md  configure.ac  create_profile.cpp  cudalt.py  fixed_locs.hpp  image.cpp  image.hpp  kernel.cpp  kernel.hpp  light_curve.cpp  light_curve.hpp  magnification_map.cu  magnification_map.hpp  main.cpp  makefile  makefile_old  map.cu  map.hpp  mpd.cpp  mpd.hpp  plot_lcurve.py  plot_locs.py  prerequisites.sh  profile.cpp  profile.hpp  read_profile.cpp  test_prog.cpp
include/: fitsInterface.hpp  fixed_locs.hpp  gerlumph.hpp  image.hpp  kernel.hpp  light_curve.hpp  magnification_map.hpp  mpd.hpp  profile.hpp  rectGrid.hpp  velocities.hpp
src/: fixed_locs.cpp  image.cpp  light_curve.cpp  magnification_map.cu  profile.cpp
src/cpu_gpu/: cpu_functions.cpp  gpu_functions.cu
src/magmap/: magnification_map.cpp
src/normal_source/: fitsInterface.cpp  fixed_locs.cpp  image.cpp  light_curve.cpp  mpd.cpp  profile.cpp  rectGrid.cpp  velocities.cpp
support/: plot_lcurve.py
test/: compare_profiles.cpp  create_profile.cpp  create_profiles.cpp  main.cpp  readMap.cpp  read_profile.cpp
tests/: build.sh  example.cpp
